new files after parsing
new files after parsing

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 		<title>Final Project  </title>
 		<meta http-equiv="Content-Type" content="text/html; charset=windows-1255">
 		<link rel="stylesheet" href="includes/style.css">
+		<style>body{margin:0px;}
+		.h,.v{stroke:black;stroke-dasharray:4 4;stroke-width:1;stroke-opacity:.5;}
+		.axis path,
+		.axis line {
+			fill: none;
+			stroke: black;
+			shape-rendering: crispEdges;
+		}
+
+		.axis text {
+			font-family: sans-serif;
+			font-size: 11px;
+		}
+		</style>
 	</head>
 	<body>
+		<script src="http://mbostock.github.com/d3/d3.v2.min.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js"></script>
- 		
-		<script src="includes/visualizeKobi.js"></script>
+ 		<script src="includes/visualizeKobi.js"></script>
 		<header>
 		</header>
 		<section>
